--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,12 @@
 
     <properties>
         <!-- build properties-->
-        <java.source>17</java.source>
-        <java.target>17</java.target>
-        <maven.compile.plugin>3.10.0</maven.compile.plugin>
+        <java.source>21</java.source>
+        <java.target>21</java.target>
+        <maven.compile.plugin>3.13.0</maven.compile.plugin>
 
         <!-- libraries -->
-        <lombok.version>1.18.22</lombok.version>
+        <lombok.version>1.18.34</lombok.version>
 
         <!-- tests -->
         <junit.version>5.8.2</junit.version>
@@ -78,6 +78,16 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.23.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.23.1</version>
         </dependency>
 
         <!-- tests -->
